Refactored the association to be specific to members and organizations